--- a/public/css/board.css
+++ b/public/css/board.css
@@ -4,29 +4,34 @@
   margin: auto;
 }
 
-.x-axis,
-.y-axis,
-.tile {
+.board .x-axis,
+.board .y-axis,
+.board .tile {
   height: 2.5vw;
   font-size: 150%;
 }
 
-.x-axis span,
-.y-axis span {
+.board .x-axis span,
+.board .y-axis span {
   padding-left: 6px;
   padding-right: 6px;
   padding-bottom: 10px;
 }
 
-.x-axis {
+.board .x-axis {
   border-left: 1px solid black;
 }
 
-.y-axis {
+.board .y-axis {
   border-top: 1px solid black;
 }
 
-.tile {
+.board .tile {
   border: 1px solid black;
   background-color: #ddd;
+}
+
+.board .unharmed {
+  background-color: #666;
+  border: none;
 }
