drag and drop appears to be working

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ nav h2 {
   background-color: #ddd;
 }
 
-.board .unharmed {
+.board .ship-unharmed {
   background-color: #666;
   border: none;
 }
