--- a/public/scss/board.scss
+++ b/public/scss/board.scss
@@ -35,7 +35,7 @@ $tile_height: $tile_width;
 		background-color: #ddd;
 	}
 
-	.unharmed {
+	.ship-unharmed {
 		background-color: #666;
 		border: none;
 	}
