--- a/public/scss/board.scss
+++ b/public/scss/board.scss
@@ -35,9 +35,30 @@ $tile_height: $tile_width;
 		background-color: #ddd;
 	}
 
+	.ship-unharmed,
+	.ship-hit,
+	.ship-sunk,
+	.hit,
+	.sunk {
+		border: none;
+	}
+
 	.ship-unharmed {
 		background-color: #666;
-		border: none;
+	}
+
+	.ship-hit,
+	.hit,
+	.sunk {
+		background-color: orange;
+	}
+
+	.ship-sunk {
+		background-color: red;
+	}
+
+	.miss {
+		background-color: yellow;
 	}
 
 }
