log is working, but needs better styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,8 @@
 	</nav>
 	<main>
 		<aside>
-			<p> This will be the log/instructions section</p>
+			<h3>Game Log</h3>
+			<div id="log-messages"></div>
 		</aside>
 
 		<section id="opponent" class="container">
