--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,14 +5,11 @@ main {
   flex-direction: row;
 }
 
-aside {
-  background-color: #ddd;
-}
-
 .container {
   padding-left: 6vw;
   padding-right: 6vw;
   width: 40%;
+  border: 1px solid black;
   background-color: #6b6bff;
 }
 
@@ -45,6 +42,22 @@ nav h2 {
   justify-content: center;
   font-size: 300%;
   color: #ddd;
+}
+
+aside {
+  width: 20%;
+  background-color: #ddd;
+}
+
+aside h3 {
+  display: flex;
+  justify-content: center;
+  border: 2px solid black;
+}
+
+aside #log-messages {
+  max-height: 500px;
+  overflow: scroll;
 }
 
 .board {
