--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,17 +19,17 @@
 	<main>
 		<aside>
 			<h3>Game Log</h3>
-			<div id="log-messages"></div>
+			<div id="log-messages">
+			</div>
 		</aside>
 
 		<section id="opponent" class="container">
-			<p>Opponent Desk</p>
 			<div class="board">
 			</div>
 		</section>
 
 		<section id="player" class="container">
-			<p>Player Desk</p>
+			<div class="name">Player</div>
 			<div class="board">
 			</div>
 		</section>
