--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,11 +26,27 @@
 		<section id="opponent" class="container">
 			<div class="board">
 			</div>
+			<div class="ship-graveyard">
+				<div class="carrier-grave"></div>
+				<div class="cruiser-grave"></div>
+				<div class="submarine-grave"></div>
+				<div class="battleship-grave"></div>
+				<div class="destroyer-grave"></div>
+				<div class="blackout"></div>
+			</div>
 		</section>
 
 		<section id="player" class="container">
 			<div class="name">Player</div>
 			<div class="board">
+			</div>
+			<div class="ship-graveyard">
+				<div class="carrier-grave"></div>
+				<div class="cruiser-grave"></div>
+				<div class="submarine-grave"></div>
+				<div class="battleship-grave"></div>
+				<div class="destroyer-grave"></div>
+				<div class="blackout"></div>	
 			</div>
 		</section>
 		
