--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -7,56 +7,78 @@ main {
 	flex-direction: row;
 }
 
-
 .container {
-
+	position: relative;	
 	padding-left: 6vw;
 	padding-right: 6vw;
 	width: 40%;
 	border: 1px solid black;
 	background-color: $primary;
 
-	p,
-	button,
 	.name {
 		display: flex;
 		justify-content: center;
-	}
-
-	.name {
 		font-size: 200%;
 		width: 200px;
 		min-height: 50px;
-		margin: auto;
-		margin-bottom: 10px;
+		margin: 10px auto;
 		padding: 5px;
 		border: 2px solid black;
 		border-radius: 30px;
 		background-color: $primary;
 	}
 
-	// #opponent .name {
-	// 	display: none;
-	// }
-
+	p,
+	button,
+	.ship-graveyard {
+		width: 100%;
+		margin: auto;
+		margin-top: 40px;
+	}
 	p,
 	button {
-		// margin: auto;
-		margin-top: 40px;
-		// align-items: center;
-
-		width: 90%;
 		font-size: 200%;
 	}
 
 	button {
-		
 		border-radius: 5px;
 		border: 2px solid black;
 	}
 
 	button:hover {
 		background-color: #ddd;
+	}
+
+	.ship-graveyard {
+		display: none;
+		height: 100px;
+		grid-template-columns: repeat(3, 33.333%);
+		font-size: 120%;
+		color: #ddd;
+
+		div {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 50px;
+			border-left: 2px solid black;
+			border-top: 2px solid black;
+		}
+
+		.battleship-grave {
+			border-bottom: 2px solid black;
+		}
+
+		.submarine-grave,
+		.destroyer-grave {
+			border-bottom: 2px solid black;
+			border-right: 2px solid black;
+		}
+
+		.blackout {
+			border: none;
+		}
+
 	}
 }
 
