ship-graveyards working and not ugly; setting up the beginning of websockets as a little aside now, then I'll go back and do the leaderboard

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -11,8 +11,8 @@
   font-size: 150%;
 }
 
-.board .x-axis span,
-.board .y-axis span {
+.board .x-axis,
+.board .y-axis {
   padding-left: 6px;
   padding-right: 6px;
   padding-bottom: 10px;
