--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,8 +127,8 @@ aside #log-messages {
   font-size: 150%;
 }
 
-.board .x-axis span,
-.board .y-axis span {
+.board .x-axis,
+.board .y-axis {
   padding-left: 6px;
   padding-right: 6px;
   padding-bottom: 10px;
