leaderboard functional, and I also managed to create a simple hard AI setting; moving on now to online play

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -44,12 +44,12 @@
 }
 
 .board .ship-hit,
-.board .hit,
-.board .sunk {
+.board .hit {
   background-color: orange;
 }
 
-.board .ship-sunk {
+.board .ship-sunk,
+.board .sunk {
   background-color: red;
 }
 
