--- a/public/css/log.css
+++ b/public/css/log.css
@@ -1,6 +1,6 @@
 aside {
   width: 20%;
-  background-color: #ddd;
+  background-color: #bbb;
 }
 
 aside h3 {
@@ -13,7 +13,10 @@ aside h3 {
 }
 
 aside #log-messages {
+  padding: 10px;
   height: 500px;
   overflow: scroll;
   border-bottom: 1px solid black;
+  background-color: #ddd;
+  font-size: 150%;
 }
