--- a/public/scss/log.scss
+++ b/public/scss/log.scss
@@ -1,10 +1,7 @@
 
 aside {
 	width: 20%;
-	background-color: #ddd;
-
-	h3 {
-	}
+	background-color: #bbb;
 
 	h3 {
 		display: flex;
@@ -15,8 +12,11 @@ aside {
 		border-bottom: 2px solid black;
 	}	
 	#log-messages {
+		padding: 10px;
 		height: 500px;
-		overflow: scroll;	
+		overflow: scroll;
 		border-bottom: 1px solid black;
+		background-color: #ddd;
+		font-size: 150%;
 	}
 }
